# root

./: .travis.yml  CMakeLists.txt  travis-build
README/: CREDITS
bindings/pyroot/: CMakeLists.txt  ROOT.py  ROOTKernel.py
bindings/pyroot/JuPyROOT/io/: Handler.py
bindings/pyroot/JuPyROOT/js/: JSROOT.py
bindings/pyroot/JuPyROOT/kernel/: Utils.py
bindings/pyroot/JuPyROOT/magics/: CppMagics.py
bindings/pyroot/ROOTaaS/iPyROOT/: __init__.py  utils.py
bindings/r/: CMakeLists.txt
bindings/r/inc/: LinkDef.h  RCppyy.h  RExports.h  TCallContext.h  TRCodeGen.h  TRCppyy.h  TRInterface.h  TRPtr.h
bindings/r/src/: RCppyy.cxx  RExports.cxx  TCallContext.cxx  TRCodeGen.cxx  TRCppyy.cxx
cmake/modules/: FindSCR.cmake  RootBuildOptions.cmake  SearchInstalledSoftware.cmake
documentation/doxygen/: Doxyfile
documentation/tmva/UsersGuide/: Makefile  PyMVA.tex  TMVAUsersGuide.tex
documentation/tmva/UsersGuide/optiontables/pymva/: MVA__PyAdaBoost.tex  MVA__PyGTB_1.tex  MVA__PyGTB_2.tex  MVA__PyRandomForest.tex  MVA__PyRandomForest_1.tex  MVA__PyRandomForest_2.tex  MVA__PyRandomForest_3.tex
documentation/tmva/UsersGuide/pymva/: PyAdaBoost.tex  PyGTB.tex  PyRandomForest.tex
documentation/users-guide/: Makefile  ROOTMpi.md
etc/notebook/kernels/root/: kernel.json
math/: CMakeLists.txt
math/ipopt/: CMakeLists.txt
math/ipopt/inc/Math/: IpoptFunctions.h  IpoptMinimizer.h
math/ipopt/src/: IpoptMinimizer.cxx
mpi/: CMakeLists.txt  TODO
mpi/rmpi/: CMakeLists.txt
mpi/rmpi/inc/: LinkDef.h  Mpi.h  TMpi.h
mpi/rmpi/inc/Mpi/: Globals.h  TCheckPoint.h  TCommunicator.h  TEnvironment.h  TGroup.h  TIntraCommunicator.h  TMpiFile.h  TMpiMessage.h  TOp.h  TPort.h
mpi/rmpi/src/: Globals.cxx  TCheckPoint.cxx  TCommunicator.cxx  TEnvironment.cxx  TGroup.cxx  TIntraCommunicator.cxx  TMpiMessage.cxx  TPort.cxx
mpi/rmpicmd/: CMakeLists.txt
mpi/rmpicmd/inc/: LinkDef.h
mpi/rmpicmd/inc/Mpi/: TCmdExecutor.h  TCmdModuleBase.h  TCmdModuleCkp.h  TCmdModuleMpiExec.h  TCmdModulePython.h  TCmdModuleROOT.h  TCmdModuleValgrind.h
mpi/rmpicmd/src/: TCmdExecutor.cxx  TCmdModuleBase.cxx  TCmdModuleCkp.cxx  TCmdModuleMpiExec.cxx  TCmdModulePython.cxx  TCmdModuleROOT.cxx  TCmdModuleValgrind.cxx  main.cxx
mpi/rootmpi/: CMakeLists.txt
mpi/rootmpi/inc/: TRootMpi.h
mpi/rootmpi/src/: TRootMpi.cxx
mpi/test/: CMakeLists.txt  communicators.C  port.C  reduce.C
tmva/: CMakeLists.txt
tmva/ptmva/: CMakeLists.txt  Makefile
tmva/ptmva/inc/: LinkDef.h
tmva/ptmva/inc/TMVA/: ParallelExecutor.h  ParallelExecutorBase.h  ParallelExecutorMpi.h
tmva/ptmva/src/: ParallelExecutor.cxx  ParallelExecutorMpi.cxx
tmva/ptmva/test/: CMakeLists.txt  ptmva_testcv.C  ptmva_testdl.C  ptmva_testfactory.C
tmva/pymva/: CMakeLists.txt
tmva/pymva/inc/: LinkDef.h
tmva/pymva/inc/TMVA/: MethodPyAdaBoost.h  MethodPyGTB.h  MethodPyRandomForest.h  PyMethodBase.h
tmva/pymva/src/: MethodPyAdaBoost.cxx  MethodPyGTB.cxx  MethodPyRandomForest.cxx  PyMethodBase.cxx
tmva/pymva/test/: Classification.C
tmva/rmva/inc/TMVA/: MethodC50.h  MethodRSNNS.h  RMethodBase.h
tmva/rmva/src/: MethodRXGB.cxx
tmva/rmva/test/: Classification.C
tmva/tmva/: CMakeLists.txt
tmva/tmva/inc/: LinkDef1.h
tmva/tmva/inc/TMVA/: Algorithm.h  Classification.h  Configurable.h  CrossValidation.h  DataInputHandler.h  DataLoader.h  DataSet.h  DataSetFactory.h  DataSetInfo.h  DataSetManager.h  Envelope.h  Event.h  Factory.h  IMethod.h  MethodBase.h  MethodBoost.h  MethodCategory.h  MsgLogger.h  OptionMap.h  ParallelExecutor.h  ParallelExecutorBase.h  ParallelExecutorMpi.h  ROCCalc.h  ROCCurve.h  ResultsClassification.h  Types.h  VariableImportance.h  Version.h
tmva/tmva/src/: Algorithm.cxx  Classification.cxx  Configurable.cxx  CrossValidation.cxx  DataInputHandler.cxx  DataLoader.cxx  DataSet.cxx  DataSetFactory.cxx  DataSetInfo.cxx  DataSetManager.cxx  DecisionTreeNode.cxx  Envelope.cxx  Event.cxx  Factory.cxx  MethodBDT.cxx  MethodBase.cxx  MethodSVM.cxx  MethodTMlpANN.cxx  MsgLogger.cxx  OptionMap.cxx  ParallelExecutor.cxx  ParallelExecutorMpi.cxx  ROCCalc.cxx  ROCCurve.cxx  VariableGaussTransform.cxx  VariableImportance.cxx  VariablePCATransform.cxx
tmva/tmvagui/: CMakeLists.txt
tmva/tmvagui/inc/TMVA/: TMVAGui.h  annconvergencetest.h  efficiencies.h  likelihoodrefs.h  mvaeffs.h  network.h  variables.h
tmva/tmvagui/src/: CorrGui.cxx  TMVAGui.cxx  annconvergencetest.cxx  correlations.cxx  correlationscatters.cxx  efficiencies.cxx  likelihoodrefs.cxx  mvaeffs.cxx  mvas.cxx  network.cxx  paracoor.cxx  probas.cxx  variables.cxx
tutorials/fit/: ipopt.C
tutorials/mpi/: ckploop.C  tree_reduce.C
tutorials/r/: Benchmark.C  Minuit.C  Tree.C
tutorials/tmva/: TMVAClassification.C
tutorials/tmva/envelope/: classification.C  crossvalidation.C  multiclassification.C
tutorials/tree/: hvector.C
